# Persian-Subtitle-Fixer

./: .gitignore  Ne0_SubFixer.py  PersianSubtitleFixer.spec  README.md  main.py  pyproject.toml  requirements.txt  subtitle_fixer_gui.py  subtitle_processor.py
.github/workflows/: release.yaml  release.yml
Bad Subs/: Case1.srt
SRC/: Ne0_SubFixer.py  main.py
assets/: comics-mask_97446.icns
